# root-vanished

./: Makefile.am  README.md  configure.ac  get_colorpixel.c  get_colorpixel.h  gettext.h  main.c  mlock.c  mlock.h  mountpoint_to_blockdev.c  mountpoint_to_blockdev.h  open_font.c  open_font.h  open_fullscreen_window.c  open_fullscreen_window.h  prepare_message_window.c  prepare_message_window.h  reboot.c  reboot.h  utf8_to_ucs2.c  utf8_to_ucs2.h  wait_for_blockdev_removal.c  wait_for_blockdev_removal.h
po/: LINGUAS  Makevars  POTFILES.in  de.po  en.po  root-vanished.pot
